# physics

./: CMakeLists.txt  glad.c  main.cpp
objects/: BaseObject.cpp  BaseObject.h  BoxObject.cpp  BoxObject.h
utils/: Color.h  Shader.cpp  Shader.h
